--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <!-- ====================== gtag.js (GA4) ====================== -->
     <!-- REPLACE G-XXXXXXXXXX WITH YOUR GA4 MEASUREMENT ID -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-23GMWNMGG0"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       // DEBUG MODE – REMOVE BEFORE PRODUCTION
-      gtag('config', 'G-23GMWNMGG0', { debug_mode: true });
+      gtag('config', 'G-XXXXXXXXXX', { debug_mode: true });
     </script>
 </head>
 <body>
