--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
 
         <!-- Product 3: Hair Dryer (Dyson) -->
-        <div class="item-block"-data-product='{
+        <div class="item-block" data-product='{
             "item_id":"003","item_name":"Hair Dryer","item_brand":"Dyson",
             "item_category":"Personal Care","price":10,"currency":"EUR"
         }'>
@@ -361,3 +361,4 @@ document.addEventListener('DOMContentLoaded', ()=>{
 </script>
 </body>
 </html>
+
